Revert "Fix scrollbar appearing on last tab bug" as it breaks on mobile
This reverts commit 6c1a1d77b8f68210f9a78f299507ba4ca2adf190.

--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,6 @@ main {
   color: #000;
 }
 
-.tabs-fixed-width {
-  overflow-x: hidden;
-}
-
 .range-field-wrapper .range-field {
   margin-top: 1rem !important;
   padding-top: 0;
